objects/wkitsm__AuditNumber__c.object
<CustomObject>
    <fields>
        <fullName>wkitsm__CaseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Audit Number</relationshipLabel>
        <relationshipName>AuditNumber</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__ChangeTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ChangeType__c</label>
        <referenceTo>wkitsm__ChangeType__c</referenceTo>
        <relationshipLabel>Change Type</relationshipLabel>
        <relationshipName>ChangeType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__IncidentTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IncidentType__c</label>
        <referenceTo>wkitsm__IncidentType__c</referenceTo>
        <relationshipLabel>Incident Type</relationshipLabel>
        <relationshipName>IncidentType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__MajorIncidentTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MajorIncidentType__c</label>
        <referenceTo>wkitsm__MajorIncidentType__c</referenceTo>
        <relationshipLabel>Major Incident Type</relationshipLabel>
        <relationshipName>MajorIncidentType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__Number__c</fullName>
        <formula>IF( Name == &apos;Change&apos;,  wkitsm__ChangeTypeId__r.Name,
IF( Name == &apos;Incident&apos;,   wkitsm__IncidentTypeId__r.Name,
IF( Name == &apos;Major Incident&apos;,   wkitsm__MajorIncidentTypeId__r.Name,
IF( Name == &apos;Problem&apos;,  wkitsm__ProblemTypeId__r.Name,
IF( Name == &apos;Request&apos;,  wkitsm__RequestTypeId__r.Name, &apos;&apos;)))))</formula>
        <label>Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__ProblemTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ProblemType__c</label>
        <referenceTo>wkitsm__ProblemType__c</referenceTo>
        <relationshipLabel>Problem Type</relationshipLabel>
        <relationshipName>ProblemType</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__RequestTypeId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RequestType__c</label>
        <referenceTo>wkitsm__RequestType__c</referenceTo>
        <relationshipLabel>Request Type</relationshipLabel>
        <relationshipName>RequestType</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Audit Number</label>
    <nameField>
        <label>Case Record Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Audit Numbers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>